# rust-scratch

./: .env_example  Cargo.toml  README.md
src/: _api_minim.rs  _arc.rs  _box_rc_arc.rs  _enum.rs  _env.rs  _error.rs  _function.rs  _future.rs  _json.rs  _lifetime.rs  _struct.rs  _text.rs  lib.rs  main.rs  ownership.rs  variable.rs
