[package]
name = "scratch"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] } # Untuk serialisasi/deserialisasi dasar
serde_json = "1.0" # Contoh untuk format JSON
dotenvy = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
axum = "0.7"